[gd_scene load_steps=5 format=3 uid="uid://cx38ynxx7ba30"]

[ext_resource type="Script" path="res://buildings/generator.gd" id="1_iiyhh"]
[ext_resource type="Texture2D" uid="uid://dxu8on7d3rwob" path="res://sprites/powerplant1.png" id="2_2xtws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fx2lb"]
size = Vector2(203, 213)

[sub_resource type="CircleShape2D" id="CircleShape2D_ubx3b"]
radius = 154.208

[node name="generator" type="StaticBody2D"]
script = ExtResource("1_iiyhh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 1.5)
shape = SubResource("RectangleShape2D_fx2lb")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.21, 0.21)
texture = ExtResource("2_2xtws")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ubx3b")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
